feat: 直播热卖商品

--- a/pages/subpages/mine/live-management/live-push/components/push-room/index.wxml
+++ b/pages/subpages/mine/live-management/live-push/components/push-room/index.wxml
@@ -16,9 +16,9 @@
       <anchor-capsule />
     </view>
 
-    <explanation-goods 
-      wx:if="{{explanationGoods && explanationGoodsVisible}}" 
-      goodsInfo="{{explanationGoods}}" 
+    <hot-goods 
+      wx:if="{{hotGoods && hotGoodsVisible}}" 
+      goodsInfo="{{hotGoods}}" 
       bind:hide="hideExplanationGoods"
     />
 
