--- a/pages/subpages/live/live-push/components/goods-shelves-popup/index.wxml
+++ b/pages/subpages/live/live-push/components/goods-shelves-popup/index.wxml
@@ -1,52 +1,53 @@
 <import src="/templates/empty-illus/index.wxml"/>
 
-<popup bind:hide="hide">
+<popup bind:hide="hide" background="#f5f6f7">
   <view class="goods-shelves-popup">
-    <view class="menu-wrap">
-      <view 
-        class="memu-item {{curMenuIdx === 0 ? 'selected' : ''}}" 
-        wx:for="{{['上架中商品', '未上架商品']}}" wx:key="index" 
-        bindtap="selectMenu" data-index="{{index}}"
-      >{{item}}</view>
+    <view class="header row between">
+      <view class="menu-wrap row">
+        <view 
+          class="memu-item row {{curMenuIdx === index ? 'selected' : ''}}" 
+          wx:for="{{['上架中商品', '未上架商品']}}" wx:key="index" 
+          bindtap="selectMenu" data-index="{{index}}"
+        >{{item}}</view>
+      </view>
+      <view class="multiple-switch row">
+        <view>多选：</view>
+        <switch bindchange="switchMultiple" color="#3979BE" />
+      </view>
     </view>
-    <scroll-view class="goods-list-wrap" wx:if="{{curMenuIdx === 0}}" scroll-y bindscrolltolower="scrolltolowerFn">
-      <view class="all-pick-bar">
-        <view class="all-pick-title-wrap" ontap="dataSelectAll0Fn">
-          <image class="select-icon" src="{{allSelected ? '/images/selected.png' : '/images/unselected.png'}}"  />
+
+    <scroll-view class="goods-list-wrap" scroll-y bindscrolltolower="scrolltolowerFn">
+      <view class="all-pick-bar row between" wx:if="{{multiple}}">
+        <view class="row" bindtap="toggleAllSelected">
+          <image class="select-icon" src="{{allSelected ? './images/selected.png' : './images/unselected.png'}}"  />
           <view class="all-pick-title">全选商品一键{{curMenuIdx === 0 ? '下架' : '上架'}}</view>
         </view>
-        <view class="all-pick-btn" ontap="statusChange" data-type="downAll">
+        <view class="all-pick-btn row center" ontap="statusChange" data-type="downAll">
           <view>{{curMenuIdx === 0 ? '下架' : '上架'}}</view>
-          <image class="all-pick-icon" src="{{curMenuIdx === 0 ? './images/all-down.png' : './images/all-up.png' }}" />
+          <image class="all-pick-icon" src="{{curMenuIdx === 0 ? './images/down.png' : './images/up.png' }}" />
         </view>
       </view>
-
       <view class="goods-list">
         <view class="goods-item" wx:for="{{goodsList}}" wx:key="index" >
-          <image class="select-icon" wx:if="{{allSelected}}" bindtap="select" data-id="{{item.id}}" src="{{item.checked  ? './images/selected.png' : './images/unselected.png'}}" />
+          <image class="select-icon" wx:if="{{multiple}}" bindtap="select" data-index="{{index}}" src="{{item.checked  ? './images/selected.png' : './images/unselected.png'}}" />
           <view class="goods-img-wrap">
             <image class="goods-img" src="{{item.image}}" />
-            <view class="goods-id">{{index}}</view>
+            <view class="goods-id">{{index + 1}}</view>
           </view>
           <view class="goods-info-wrap">
-            <view class="goods-name">
-              <text class="goods-tag">直播上新</text>
-              <text>{{item.name}}</text>
-            </view>
-            <view class="goods-stock">库存：{{item.stock}}件</view>
+            <view class="goods-name omit">{{item.name}}</view>
+            <view class="goods-stock">库存：{{item.stock}}</view>
             <view class="goods-price-wrap">
-              <view class="goods-price">{{item.price}}</view>
+              <price-unit price="{{item.price}}" />
               <view class="btns-wrap">
-                <view class="recommend-btn {{item.isHot ? 'invalid' : ''}}" bindtap="{{item.isHot ? 'cancleHot' : 'setHot'}}" data-id="{{item.id}}">{{item.isHot ? '取消热卖' : '热卖'}}</view>
+                <view class="recommend-btn {{item.isHot ? 'invalid' : ''}}" wx:if="{{curMenuIdx === 0}}" bindtap="{{item.isHot ? 'cancleHot' : 'setHot'}}" data-id="{{item.id}}">{{item.isHot ? '取消热卖' : '热卖'}}</view>
                 <image class="goods-pick-btn" bindtap="{{curMenuIdx === 0 ? 'delisting' : 'listing'}}" data-id="{{item.id}}" src="{{curMenuIdx === 0 ? './images/down.png' : './images/up.png'}}" />
               </view>
             </view>
           </view>
         </view>
       </view>
-      <view class="empty-illus-wrap" wx:if="{{!goodsList.length}}">
-        <template is="i-empty-illus" data="{{desc: '暂无商品'}}" />
-      </view>
+      <empty-illus wx:if="{{!goodsList.length}}" desc="暂无商品" />
     </scroll-view>
   </view>
 </popup>
