--- a/components/popup/index.wxml
+++ b/components/popup/index.wxml
@@ -1,4 +1,4 @@
 <view class="mask {{show ? 'show' : ''}}" catchtap="hide" />
-<view class="popup {{show ? 'show' : ''}}" catchtap="catchtap">
+<view class="popup {{show ? 'show' : ''}}" style="background: {{background}};" catchtap="catchtap">
   <slot />
 </view>
