--- a/pages/subpages/live/live-push/components/goods-shelves-popup/index.wxss
+++ b/pages/subpages/live/live-push/components/goods-shelves-popup/index.wxss
@@ -63,7 +63,8 @@
   font-size: 14px;
 }
 .all-pick-btn {
-  width: 64px;
+  padding-left: 8px;
+  padding-right: 6px;
   height: 24px;
   color: #fff;
   font-size: 12px;
@@ -165,7 +166,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 64px;
+  padding: 0 10px;
   height: 24px;
   font-size: 12px;
   line-height: 1;
