--- a/pages/subpages/live/live-push/components/hd-popup/index.wxss
+++ b/pages/subpages/live/live-push/components/hd-popup/index.wxss
@@ -2,6 +2,7 @@
   padding-bottom: env(safe-area-inset-bottom);
   overflow-y: scroll;
 }
+
 .title {
   display: flex;
   align-items: center;
@@ -11,4 +12,30 @@
   font-size: 16px;
   font-weight: bold;
   line-height: 1;
+}
+
+.resolution-selections {
+  margin-top: 20rpx;
+}
+.resolution-selection {
+  width: 204rpx;
+  height: 100rpx;
+  color: #999;
+  text-align: center;
+  background: #F5F6F7;
+  border-radius: 8rpx;
+}
+.resolution-selection.active {
+  position: relative;
+  color: #fff;
+  background: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
+}
+.resolution-name {
+  margin-top: 16rpx;
+  font-size: 24rpx;
+  font-weight: bold;
+}
+.resolution-detail {
+  margin-top: 6rpx;
+  font-size: 20rpx;
 }
