--- a/pages/subpages/live/live-play/components/play-room/index.wxml
+++ b/pages/subpages/live/live-play/components/play-room/index.wxml
@@ -1,5 +1,3 @@
-<import src="./templates/i-status-loading/index.wxml"/>
-
 <wxs module="NUM" src="/utils/filters/num.wxs" />
 
 <view class="room {{!srcIniting ? 'show' : ''}}" ontap="dbTap">
@@ -43,15 +41,12 @@
   <image class="praise-heart" style="{{item.style}}" wx:for="{{praiseHeartArr}}" wx:key="index" src="{{item.url}}" />
 </view>
 
-<!-- 直播卡顿 -->
-<template is="i-status-loading" wx:if="{{liveLoading}}" />
-
 <!-- 直播中断 -->
-<i-status-break wx:if="{{liveBreak}}" />
-
-<!-- 直播预告 -->
-<i-status-unstart wx:if="{{roomInfo.status === 3}}" roomInfo="{{roomInfo}}" bind:share="showShareModal" />
+<i-status-break wx:if="{{liveLoading || liveBreak}}" />
 
 <!-- 直播结束 -->
 <i-status-end wx:if="{{liveEnd}}" liveDuration="{{liveDuration}}" anchorAvatar="{{roomInfo.anchorAvatar}}" anchorName="{{roomInfo.anchorName}}" />
+
+<!-- 直播预告 -->
+<i-status-unstart wx:if="{{roomInfo.status === 3}}" roomInfo="{{roomInfo}}" bind:share="showShareModal" />
  
