--- a/pages/subpages/live/live-play/index.wxml
+++ b/pages/subpages/live/live-play/index.wxml
@@ -2,7 +2,13 @@
 
 <swiper class="rooms-wrap" bindchange="changeRoom" vertical>
   <swiper-item wx:for="{{roomList}}" wx:key="index">
-    <image class="bg" wx:if="{{index > (curRoomIdx - 2) && index < (curRoomIdx + 2)}}" src="{{IMG.resize(item.cover, 10)}}" mode="aspectFill" lazy-load />
+    <image 
+      class="bg" 
+      wx:if="{{index > (curRoomIdx - 2) && index < (curRoomIdx + 4)}}" 
+      src="{{IMG.resize(item.cover, 10)}}" 
+      mode="aspectFill" 
+      lazy-load 
+    />
     <block wx:if="{{index === curRoomIdx}}">
       <play-room wx:if="{{item.status === 1}}" roomInfo="{{item}}" />
       <live-notice wx:if="{{item.status === 3}}" roomInfo="{{item}}" />
@@ -11,9 +17,4 @@
 </swiper>
 
 <back-icon class="back-icon" style="top: {{statusBarHeight}}px;"/>
-<i-mask wx:if="{{maskVisible}}" opcity="{{maskOpcity}}" ontap="hideModal" />
-<i-input wx:if="{{inputModalVisible}}" roomInfo="{{roomList[curRoomIdx]}}" />
-<i-goods-modal show="{{goodsModalVisible}}" goodsList="{{goodsList}}" liveId="{{roomList[curRoomIdx].id}}" bind:showSpecSelection="showSpecModal"/>
-<i-spec-modal show="{{specModalVisible}}" />
-<i-share-modal show="{{shareModalVisible}}" bind:showPosterModal="showPosterModal" />
-<i-poster-modal wx:if="{{posterModalVisible}}" roomPosterInfo="{{roomPosterInfo}}" bind:hidePosterModal="hideModal"/>
+<share-popup show="{{shareModalVisible}}" />
